EXTRA_DIST = \
	cat.cmake \
	check_minimal_version.cmake \
	create_initial_db.cmake.in \
	make_dist.cmake.in \
	dtrace.cmake \
	abi_check.cmake \
	bison.cmake \
	configure.pl \
	character_sets.cmake \
	misc.cmake \
	readline.cmake \
	mysql_version.cmake   \
	install_macros.cmake  \
	ssl.cmake \
	plugin.cmake \
	zlib.cmake \
	stack_direction.c \
	do_abi_check.cmake \
	merge_archives_unix.cmake.in \
	dtrace_prelink.cmake
