EXTRA_DIST = \
	cmake_parse_arguments.cmake \
	package_name.cmake \
	configurable_file_content.in \
	check_minimal_version.cmake \
	create_initial_db.cmake.in \
	make_dist.cmake.in \
	dtrace.cmake \
	abi_check.cmake \
	bison.cmake \
	configure.pl \
	character_sets.cmake \
	libutils.cmake \
	readline.cmake \
	mysql_version.cmake   \
	install_macros.cmake  \
	ssl.cmake \
	plugin.cmake \
	zlib.cmake \
	stack_direction.c \
	do_abi_check.cmake \
	merge_archives_unix.cmake.in \
	dtrace_prelink.cmake \
	versioninfo.rc.in \
	mysql_add_executable.cmake  \
	install_layout.cmake \
	build_configurations/mysql_release.cmake \
	os/Windows.cmake \ 
	os/WindowsCache.cmake \
	os/Linux.cmake \
	os/SunOS.cmake \
	os/Darwin.cmake \
	os/HP-UX.cmake \
	os/AIX.cmake \
	os/OS400.cmake \
	os/Cygwin.cmake
	

