# Copyright (c) 2009, 2010, Oracle and/or its affiliates. All rights reserved.
# 
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; version 2 of the License.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA 

EXTRA_DIST = \
	cmake_parse_arguments.cmake \
	cpack_source_ignore_files.cmake \
	package_name.cmake \
	configurable_file_content.in \
	check_minimal_version.cmake \
	create_initial_db.cmake.in \
	make_dist.cmake.in \
	dtrace.cmake \
	abi_check.cmake \
	bison.cmake \
	configure.pl \
	character_sets.cmake \
	libutils.cmake \
	readline.cmake \
	mysql_version.cmake   \
	install_macros.cmake  \
	ssl.cmake \
	run_collection.cmake.in \
	plugin.cmake \
	zlib.cmake \
	stack_direction.c \
	do_abi_check.cmake \
	merge_archives_unix.cmake.in \
	dtrace_prelink.cmake \
	versioninfo.rc.in \
	mysql_add_executable.cmake  \
	install_layout.cmake \
	build_configurations/mysql_release.cmake \
	os/Windows.cmake \
	os/WindowsCache.cmake \
	os/Linux.cmake \
	os/SunOS.cmake \
	os/Darwin.cmake \
	os/HP-UX.cmake \
	os/AIX.cmake \
	os/OS400.cmake \
	os/Cygwin.cmake
	

